# mqt-qcec

./: .cirrus.yml  .clang-format  .clang-tidy  .flake8  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  README.md  UPGRADING.md  noxfile.py  pyproject.toml  setup.py
apps/: CMakeLists.txt  app.cpp  sim_app.cpp
jkq/qcec/: CMakeLists.txt  __init__.py  bindings.cpp  qcecPythonBindings.cpp  verify.py
src/: CMakeLists.txt  CompilationFlowEquivalenceChecker.cpp  Configuration.cpp  EquivalenceChecker.cpp  EquivalenceCheckingManager.cpp  EquivalenceCheckingResults.cpp  ImprovedDDEquivalenceChecker.cpp  PowerOfSimulationEquivalenceChecker.cpp  SimulationBasedEquivalenceChecker.cpp
src/alternating/: DDAlternatingChecker.cpp
src/applicationscheme/: GateCostApplicationScheme.cpp  LookaheadApplicationScheme.cpp  ProportionalApplicationScheme.cpp
src/checker/: DDAlternatingChecker.cpp  DDConstructionChecker.cpp  DDEquivalenceChecker.cpp  DDSimulationChecker.cpp  EquivalenceChecker.cpp
src/checker/dd/: DDAlternatingChecker.cpp  DDConstructionChecker.cpp  DDEquivalenceChecker.cpp  DDHybridSchrodingerFeynmanChecker.cpp  DDPartialEquivalence.cpp  DDPartialEquivalenceBenchmarks.cpp  DDSimulationChecker.cpp  HybridSchrodingerFeynmanChecker.cpp
src/checker/zx/: ZXChecker.cpp
src/construction/: DDConstructionChecker.cpp
src/mqt/qcec/: __init__.py  compilation_flow_profiles.py  configuration.py  literals.py  parameterized.py  pyqcec.pyi  types.py  verify.py  verify_compilation_flow.py
src/python/: CMakeLists.txt  bindings.cpp
src/simulation/: DDSimulationChecker.cpp  StateGenerator.cpp
test/: CMakeLists.txt  main.cpp  test_compilationflow.cpp  test_dynamic_circuits.cpp  test_eq_circuits.cpp  test_equality.cpp  test_functionality.cpp  test_gate_cost_application_scheme.cpp  test_general.cpp  test_hsf.cpp  test_journal.cpp  test_noneq_circuits.cpp  test_partial_equivalence.cpp  test_powerofsimulation.cpp  test_simple_circuit_identities.cpp  test_simulation.cpp  test_symbolic.cpp  test_zx.cpp
test/circuits/: test_alternative.real  test_erroneous.real  test_error.qasm  test_original.real
test/circuits/alternative/: 3_17_13.real  cycle10_293.real  grover.qasm  grover_5.real  ham15_298.real  hwb5_300.real  hwb7_59.real  hwb8_114.real  mod5adder_129.real  mod5adder_306.real  plus63mod8192_310.real  qft_16.real  rd84_313.real  test2_optimized.qasm  test_ancilla.qasm  test_ancilla_inputperm_outputperm_optimizedswap.qasm  test_ancilla_inputperm_outputperm_optimizedswap2.qasm  test_inputperm.qasm  test_outputperm.qasm  urf2_152.real  urf2_277.real  urf3_155.real
test/circuits/approximateEquivalenceTest/: bell.qasm  bell_out_default_error.qasm  bell_out_high_error.qasm  dj_indep_qiskit_10_no_measure.qasm  dj_nativegates_ibm_qiskit_opt3_10_no_measure.qasm  ghz_indep_qiskit_10_no_measure.qasm  ghz_nativegates_ibm_qiskit_opt3_10_no_measure.qasm  graphstate_indep_qiskit_10_no_measure.qasm  graphstate_nativegates_ibm_qiskit_opt3_10_no_measure.qasm  heisenberg16_out_default_error.qasm  heisenberg16_out_high_error.qasm  heisenberg16_out_small_error.qasm  out_dj_indep_qiskit_10_high_error.qasm  out_dj_nativegates_ibm_qiskit_opt3_10_high_error.qasm  out_ghz_indep_qiskit_10_high_error.qasm  out_ghz_nativegates_ibm_qiskit_opt3_10_high_error.qasm  out_graphstate_indep_qiskit_10_high_error.qasm  out_graphstate_nativegates_ibm_qiskit_opt3_10_high_error.qasm  out_qaoa_indep_qiskit_10_high_error.qasm  out_qaoa_nativegates_ibm_qiskit_opt3_10_high_error.qasm  out_vqe_indep_qiskit_10_high_error.qasm  out_vqe_nativegates_ibm_qiskit_opt3_10_high_error.qasm  out_wstate_indep_qiskit_10_high_error.qasm  out_wstate_nativegates_ibm_qiskit_opt3_10_high_error.qasm  qaoa_indep_qiskit_10_no_measure.qasm  qaoa_nativegates_ibm_qiskit_opt3_10_no_measure.qasm  toffoli.qasm  toffoli_out_default_error.qasm  toffoli_out_high_error.qasm  toffoli_out_small_error.qasm  vqe_indep_qiskit_10_no_measure.qasm  vqe_nativegates_ibm_qiskit_opt3_10_no_measure.qasm  wstate_indep_qiskit_10_no_measure.qasm  wstate_nativegates_ibm_qiskit_opt3_10_no_measure.qasm
test/circuits/erroneous/: 3_17_13.real  cycle10_293.real  grover.qasm  grover_5.real  ham15_298.real  hwb5_300.real  hwb7_59.real  hwb8_114.real  mod5adder_129.real  mod5adder_306.real  plus63mod8192_310.real  qft_16.real  rd84_313.real  urf2_152.real  urf2_277.real  urf3_155.real
test/circuits/original/: 0410184_169.real  3_17_13.real  3_17_15.real  4_49_16.real  4gt11-v1_85.real  4gt11_84.real  4gt4-v0_72.real  4mod5-v0_18.real  4mod5-v0_19.real  5xp1_194.qasm  5xp1_194.real  C7552_205.qasm  C7552_205.real  add6_196.qasm  add6_196.real  alu1_198.qasm  alu1_198.real  apla_203.qasm  apla_203.real  c2_181.qasm  c2_181.real  c2_182.qasm  c2_182.real  clip_206.real  cm150a_210.qasm  cm150a_210.real  cm151a_211.qasm  cm151a_211.real  cm163a_213.qasm  cm163a_213.real  cu_219.qasm  cu_219.real  cycle10_293.real  decod24-v1_42.real  decod24-v3_46.real  deutsch-josza_16_const.real  dk17_224.qasm  dk17_224.real  dk27_225.qasm  dk27_225.real  (+31 more)
test/circuits/partialEquivalenceTest/: Grover_1.qasm  Grover_2.qasm  add6_196_1.qasm  add6_196_2.qasm  bv_1.qasm  bv_2.qasm  entanglement_1.qasm  entanglement_2.qasm  grover-noancilla_indep_qiskit_3.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_3.qasm  grover-noancilla_nativegates_ibm_qiskit_opt0_7.qasm  grover-noancilla_nativegates_ibm_qiskit_opt1_7.qasm  period_finding_1.qasm  period_finding_2.qasm  random_1.qasm  random_2.qasm
test/legacy/: test_compilationflow.cpp  test_functionality.cpp  test_general.cpp  test_journal.cpp  test_simulation.cpp
test/python/: constraints.txt  requirements-test.txt  test.py  test_approximate_equivalence.py  test_compilation_flow_profiles.py  test_configuration.py  test_construction.py  test_dynamic_circuits.py  test_failure.py  test_hsf.py  test_partial_equivalence.py  test_symbolic.py  test_verify.py  test_verify_compilation.py
(+245 files in other folders)
